# CoinGecko-Scraper

./: .gitignore  README.md  pyproject.toml  test_app.py
backend/: README.md
backend/Scraping/: main.py
frontend/: app.py
frontend/static/css/: main.css  start.css
frontend/templates/: all_crypto.html  base.html  index.html  login.html  profile.html  register.html  start.html
