[tool.poetry]
name = "pierwszy"
version = "0.1.0"
description = ""
authors = ["sajkora <supcioadi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.1"
bs4 = "^0.0.2"
requests = "^2.31.0"
numpy = "^1.26.4"
playwright = "^1.42.0"
lxml = "^5.2.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
